[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>oracle-cloud-infrastructure-devops</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
@@ -36,7 +36,7 @@
         <connection>scm:git:https://github.com/jenkinsci/oracle-cloud-infrastructure-devops-plugin</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/oracle-cloud-infrastructure-devops-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/oracle-cloud-infrastructure-devops-plugin</url>
-        <tag>oracle-cloud-infrastructure-devops-1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <dependencies>
         <dependency>
